--- a/src/app_style.scss
+++ b/src/app_style.scss
@@ -180,6 +180,8 @@ body {
 .tek-border-light {
     border: 2px solid $purple;
     border-radius: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .tek-border-header {
@@ -193,4 +195,12 @@ body {
 .social-icon {
     margin-left: 5px;
     margin-right: 5px;
+}
+
+.tek-modal-account {
+    background-color: $gray-900;
+    padding-top:50px;
+    padding-bottom: 50px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
